
[metadata]
name = KiToolKit
version = 0.0.1
url = https://github.com/lukh/kitoolkit
author = Vivien Henry
author_email = vivien.henry@inductivebrain.fr
license = MIT license
license_file = LICENSE
description = Toolkit to generate manufacturing files for KiCAD projects
long_description = file: README.rst + '\n\n' + file: HISTORY.rst
long_description_content_type = text/x-rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires = 
    kicad2charmhigh
    pyexcel
    pyexcel-odsr
    pyexcel-xls
    InteractiveHtmlBom

[options.entry_points]
console_scripts =
    kitoolkit=kitoolkit.cli:main


[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-bugbear
    flake8-import-order
    isort[pyproject]
release =
    twine
    wheel
test =
    pytest
    pytest-cov
dev =
    %(lint)s
    %(release)s
    %(test)s


[options.packages.find]
exclude =
    tests
    tests.*


[flake8]
application-import-names = kitoolkit, tests
max-line-length = 80
exclude = .git, .tox, build
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # B950: line too long (soft speed limit)
    B950
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503
    # B305: .next() is not a thing on Python 3 (used by playback controller)
    B305

[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:kitoolkit/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[aliases]
# Define setup.py command aliases here